[project]
name = "komodo-mcp"
version = "0.1.0"
description = "MCP server for Komodo DevOps platform"
readme = "README.md"
authors = [
    { name = "Yorsh Siarhei", email = "siarhei@intermezzo.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "uvicorn",
    "httpx",
    "pydantic-settings",
    "python-dotenv>=1.2.2",
]

[project.scripts]
komodo-mcp = "komodo_mcp.server:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "black==25.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
